--- a/css/react-flags-select.css
+++ b/css/react-flags-select.css
@@ -56,7 +56,7 @@
       width: 90%;
       margin: 0 4%; }
   .flag-select .arrow-down {
-    color: #4d4d4d;
+    /*color: #4d4d4d;*/
     padding: 2px; }
   .flag-select .hidden {
     display: none; }
