--- a/css/react-flags-select.css
+++ b/css/react-flags-select.css
@@ -3,7 +3,7 @@
   display: inline-block;
   vertical-align: inherit;
   padding-bottom: 5px;
-  /*color: #4d4d4d;*/
+  color: #4d4d4d;
   text-align: left; }
   .flag-select img {
     width: 1.3em;
@@ -56,7 +56,7 @@
       width: 90%;
       margin: 0 4%; }
   .flag-select .arrow-down {
-    /*color: #4d4d4d;*/
+    color: #4d4d4d;
     padding: 2px; }
   .flag-select .hidden {
     display: none; }
