--- a/css/react-flags-select.css
+++ b/css/react-flags-select.css
@@ -56,8 +56,8 @@
       width: 90%;
       margin: 0 4%; }
   .flag-select .arrow-down {
-    color: #4d4d4d;
-    padding: 2px; }
+    /*color: #4d4d4d;*/
+    padding: 4px; }
   .flag-select .hidden {
     display: none; }
   .flag-select .no--focus {
